# Notation

./: .flake8  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  python-ci.yml
docs/source/: conf.py  index.rst  notation.rst  requirements.txt  standard.rst
notation/: __init__.py  card.py  header.py  player.py  stack.py
tests/: composites.py  test_card.py  test_context.py  test_header.py  test_stack.py
