[tool.poetry]
name = "notation"
# remember to also update the version in __init__.py!
version = "0.0.1"
description = "Provides a standard for card game notation"
authors = ["Whist-Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Whist-Team/Notation"
repository = "https://github.com/Whist-Team/Notation"
documentation = "https://card-notation.readthedocs.io"
keywords = ["game", "card", "notation"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Whist-Team/Notation/issues"

[tool.poetry.dependencies]
python = "^3.9"
flake8-docstrings = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
flake8 = "^7.0"
flake8-docstrings = "^1.6"
pylint = "^3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
