[tool.poetry]
name = "notation"
# remember to also update the version in __init__.py!
version = "0.0.1"
description = "Provides a standard for card game notation"
authors = ["Whist-Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Whist-Team/Notation"
repository = "https://github.com/Whist-Team/Notation"
documentation = "https://card-notation.readthedocs.io"
keywords = ["game", "card", "notation"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Whist-Team/Notation/issues"

[tool.poetry.dependencies]
python = "^3.10"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24.0" # .5 because that version is the first to have compat with pytest 8
flake8 = "^7.1"
flake8-docstrings = "^1.7"
pylint = "^3.3"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.82.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
