[project]
name = "notation"
# remember to also update the version in __init__.py!
version = "0.0.1"
description = "Provides a standard for card game notation"
authors = [{ name = "Whist-Team" }]
license = "MIT"
readme = "README.md"
keywords = ["game", "card", "notation"]
classifiers = [
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/Whist-Team/Notation"
source = "https://github.com/Whist-Team/Notation"
documentation = "https://card-notation.readthedocs.io"
issues = "https://github.com/Whist-Team/Notation/issues"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^1.0"
flake8 = "^7.2"
flake8-docstrings = "^1.7"
pylint = "^3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
